@@ -1,0 +1,4 @@
+void helloworld(int a);
+/* this is not implemented when SHARED_FAIL is defined */
+void helloworld(char c);
+void helloworld(double c);
