@@ -1,3 +1,7 @@
+2011-06-17: compare-linkage.cpp,compare-linkage.makefile,helloworld.cpp,helloworld.h
+
+	* 共有ライブラリと静的リンクの違いを確認する。
+
 2011-06-13: sandboxlib.py
 
 	* Utility script, argument parser and timezone config.
